0419_InsertAfter, InsertBefore를 적용한 요소 순환구조

--- a/ex4-26.html
+++ b/ex4-26.html
@@ -17,7 +17,7 @@
             <button class="next_b">&gt;</button>
         </div>
 
-        <div id="currentNumDp"></div>
+        <!--<div id="currentNumDp"></div>-->
         <div class="vis">
             <div><a href="#"><img src="1.jpg" alt="HTML"></a></div>
             <div><a href="#"><img src="2.jpg" alt="CSS"></a></div>
